"""initial_full_schema

Revision ID: 00e3759d911c
Revises: 
Create Date: 2026-05-22 23:51:17.817075

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

revision: str = '00e3759d911c'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('users',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('email', sa.String(length=255), nullable=False),
    sa.Column('password_hash', sa.Text(), nullable=False),
    sa.Column('role', sa.String(length=20), nullable=False),
    sa.Column('plan', sa.String(length=20), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('webhook_url', sa.String(length=2048), nullable=True),
    sa.Column('webhook_secret', sa.String(length=255), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('deleted_at', sa.DateTime(timezone=True), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_users_email'), 'users', ['email'], unique=True)
    op.create_index(op.f('ix_users_role'), 'users', ['role'], unique=False)
    op.create_index(op.f('ix_users_status'), 'users', ['status'], unique=False)
    op.create_table('api_keys',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('name', sa.String(length=255), nullable=False),
    sa.Column('key_hash', sa.Text(), nullable=False),
    sa.Column('environment', sa.String(length=20), nullable=False),
    sa.Column('last_used_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('revoked_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_api_keys_key_hash'), 'api_keys', ['key_hash'], unique=True)
    op.create_index(op.f('ix_api_keys_user_id'), 'api_keys', ['user_id'], unique=False)
    op.create_table('dashboard_sessions',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('token_hash', sa.Text(), nullable=False),
    sa.Column('ip_address', sa.String(length=45), nullable=True),
    sa.Column('user_agent', sa.Text(), nullable=True),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('revoked_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_dashboard_sessions_expires_at'), 'dashboard_sessions', ['expires_at'], unique=False)
    op.create_index(op.f('ix_dashboard_sessions_token_hash'), 'dashboard_sessions', ['token_hash'], unique=True)
    op.create_index(op.f('ix_dashboard_sessions_user_id'), 'dashboard_sessions', ['user_id'], unique=False)
    op.create_table('user_settings',
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('allowed_doc_types', postgresql.ARRAY(sa.Text()), nullable=True),
    sa.Column('require_liveness', sa.Boolean(), nullable=False),
    sa.Column('retention_days', sa.Integer(), nullable=False),
    sa.Column('allowed_origins', postgresql.ARRAY(sa.Text()), nullable=True),
    sa.Column('score_approve_threshold', sa.Integer(), nullable=True),
    sa.Column('score_reject_threshold', sa.Integer(), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('user_id')
    )
    op.create_table('verifications',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('reference_id', sa.String(length=255), nullable=False),
    sa.Column('document_type', sa.String(length=50), nullable=False),
    sa.Column('status', sa.String(length=20), nullable=False),
    sa.Column('score', sa.Integer(), nullable=True),
    sa.Column('decision', sa.String(length=20), nullable=True),
    sa.Column('checks', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('extracted_fields', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('doc_front_key', sa.Text(), nullable=True),
    sa.Column('doc_back_key', sa.Text(), nullable=True),
    sa.Column('selfie_key', sa.Text(), nullable=True),
    sa.Column('session_token', sa.String(length=64), nullable=True),
    sa.Column('session_expires_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('locale', sa.String(length=10), nullable=False),
    sa.Column('redirect_url', sa.Text(), nullable=True),
    sa.Column('ip_address', sa.String(length=45), nullable=True),
    sa.Column('user_agent', sa.Text(), nullable=True),
    sa.Column('attempt_number', sa.Integer(), nullable=False),
    sa.Column('metadata', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('completed_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('purge_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_verifications_purge_at'), 'verifications', ['purge_at'], unique=False)
    op.create_index(op.f('ix_verifications_reference_id'), 'verifications', ['reference_id'], unique=False)
    op.create_index(op.f('ix_verifications_session_token'), 'verifications', ['session_token'], unique=True)
    op.create_index(op.f('ix_verifications_status'), 'verifications', ['status'], unique=False)
    op.create_index(op.f('ix_verifications_user_id'), 'verifications', ['user_id'], unique=False)
    op.create_table('audit_events',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('verification_id', sa.String(length=36), nullable=True),
    sa.Column('event_type', sa.String(length=50), nullable=False),
    sa.Column('actor', sa.String(length=100), nullable=False),
    sa.Column('payload', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['verification_id'], ['verifications.id'], ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_audit_events_created_at'), 'audit_events', ['created_at'], unique=False)
    op.create_index(op.f('ix_audit_events_event_type'), 'audit_events', ['event_type'], unique=False)
    op.create_index(op.f('ix_audit_events_verification_id'), 'audit_events', ['verification_id'], unique=False)
    op.create_table('webhook_deliveries',
    sa.Column('id', sa.String(length=36), nullable=False),
    sa.Column('verification_id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(length=36), nullable=False),
    sa.Column('url', sa.Text(), nullable=False),
    sa.Column('payload', postgresql.JSONB(astext_type=sa.Text()), nullable=False),
    sa.Column('status_code', sa.Integer(), nullable=True),
    sa.Column('attempt', sa.Integer(), nullable=False),
    sa.Column('next_retry_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('delivered_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['verification_id'], ['verifications.id'], ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_webhook_deliveries_delivered_at'), 'webhook_deliveries', ['delivered_at'], unique=False)
    op.create_index(op.f('ix_webhook_deliveries_next_retry_at'), 'webhook_deliveries', ['next_retry_at'], unique=False)
    op.create_index(op.f('ix_webhook_deliveries_user_id'), 'webhook_deliveries', ['user_id'], unique=False)
    op.create_index(op.f('ix_webhook_deliveries_verification_id'), 'webhook_deliveries', ['verification_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_webhook_deliveries_verification_id'), table_name='webhook_deliveries')
    op.drop_index(op.f('ix_webhook_deliveries_user_id'), table_name='webhook_deliveries')
    op.drop_index(op.f('ix_webhook_deliveries_next_retry_at'), table_name='webhook_deliveries')
    op.drop_index(op.f('ix_webhook_deliveries_delivered_at'), table_name='webhook_deliveries')
    op.drop_table('webhook_deliveries')
    op.drop_index(op.f('ix_audit_events_verification_id'), table_name='audit_events')
    op.drop_index(op.f('ix_audit_events_event_type'), table_name='audit_events')
    op.drop_index(op.f('ix_audit_events_created_at'), table_name='audit_events')
    op.drop_table('audit_events')
    op.drop_index(op.f('ix_verifications_user_id'), table_name='verifications')
    op.drop_index(op.f('ix_verifications_status'), table_name='verifications')
    op.drop_index(op.f('ix_verifications_session_token'), table_name='verifications')
    op.drop_index(op.f('ix_verifications_reference_id'), table_name='verifications')
    op.drop_index(op.f('ix_verifications_purge_at'), table_name='verifications')
    op.drop_table('verifications')
    op.drop_table('user_settings')
    op.drop_index(op.f('ix_dashboard_sessions_user_id'), table_name='dashboard_sessions')
    op.drop_index(op.f('ix_dashboard_sessions_token_hash'), table_name='dashboard_sessions')
    op.drop_index(op.f('ix_dashboard_sessions_expires_at'), table_name='dashboard_sessions')
    op.drop_table('dashboard_sessions')
    op.drop_index(op.f('ix_api_keys_user_id'), table_name='api_keys')
    op.drop_index(op.f('ix_api_keys_key_hash'), table_name='api_keys')
    op.drop_table('api_keys')
    op.drop_index(op.f('ix_users_status'), table_name='users')
    op.drop_index(op.f('ix_users_role'), table_name='users')
    op.drop_index(op.f('ix_users_email'), table_name='users')
    op.drop_table('users')
    # ### end Alembic commands ###
